--- a/src/components/upgrade-panel/upgrade-panel.component.css
+++ b/src/components/upgrade-panel/upgrade-panel.component.css
@@ -47,6 +47,7 @@
 
 .TechPanel .TechList {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .TechPanel .TechList > .Tech:not(:first-child) {
